Increase test coverage for certificate listing (#1263)